--- a/Project Under Maintenance/style.css
+++ b/Project Under Maintenance/style.css
@@ -31,12 +31,11 @@ body {
   z-index: 10;
   background-color: #505050;
   border-radius: 1.1rem;
-  height: 35rem;
-  width: 40rem;
-  padding: 2rem;
+  height: fit-content;
+  width: fit-content;
   z-index: 10;
-
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  padding: 0 10rem 0 10rem;
 }
 
 .logo {
@@ -59,12 +58,27 @@ body {
 
 .copy p {
   font-weight: 700;
+  font-size: 2rem;
 }
 
-h1 {
+.content h1 {
+  text-align: center;
   font-size: 5rem;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
-p {
-  font-size: 2rem;
+.content p {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 3.35rem;
+}
+
+.since {
+  background-color: #404040;
+  text-align: center;
+  margin: 2rem;
+  font-size: 3rem;
+  padding: 1rem;
+  border-radius: 1.1rem;
+  font-weight: 800;
+  width: 50rem;
 }
