--- a/Project Under Maintenance/style.css
+++ b/Project Under Maintenance/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: "Ubuntu", sans-serif;
-  background-color: #404040;
+  background-color: #3e3e3e;
   color: white;
   padding: 0;
   margin: 0;
