--- a/Project Under Maintenance/style.css
+++ b/Project Under Maintenance/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
 
 html {
-  font-size: 10px;
+  font-size: 62.5%;
 }
 
 body {
@@ -27,15 +27,39 @@ body {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
 
-.modal {
+#modal {
   z-index: 10;
   background-color: #505050;
   border-radius: 1.1rem;
-  height: fit-content;
-  width: fit-content;
+  height: 45rem;
+  width: 35rem;
   z-index: 10;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-  padding: 0 10rem 0 10rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#modal__h1 {
+  font-size: 4rem;
+  padding: 0rem !important;
+  margin: 0rem !important;
+}
+
+#modal__p {
+  font-size: 1.5rem;
+}
+
+#since {
+  background-color: #3e3e3e;
+  border-radius: 1.1rem;
+  height: 7rem;
+  font-size: 2rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  padding: 1rem 1rem 1rem 2rem;
+  margin-top: auto;
 }
 
 .logo {
@@ -59,26 +83,4 @@ body {
 .copy p {
   font-weight: 700;
   font-size: 2rem;
-}
-
-.content h1 {
-  text-align: center;
-  font-size: 5rem;
-  margin-bottom: 1rem;
-}
-.content p {
-  text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 3.35rem;
-}
-
-.since {
-  background-color: #404040;
-  text-align: center;
-  margin: 2rem;
-  font-size: 3rem;
-  padding: 1rem;
-  border-radius: 1.1rem;
-  font-weight: 800;
-  width: 50rem;
 }
